# GameOfLife

./: .gitignore  CMakeLists.txt  version.h.in
include/life/: version.h
src/: CMakeLists.txt  board.cpp  board.hpp  board_window.cpp  board_window.hpp  cell.cpp  cell.hpp  gol_window.cpp  gol_window.hpp  main.cpp
